[package]
name = "status-line"
version = "0.1.1"
description = "This crate allows you to display status & progress information in a terminal"
authors = ["Piotr Kołaczkowski <pkolaczk@gmail.com>"]
categories = ["command-line-interface"]
keywords = ["status", "progress", "progressbar", "terminal", "cli"]
homepage = "https://github.com/pkolaczk/status-line"
repository = "https://github.com/pkolaczk/status-line"
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.1"

